--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap");
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  
+   }
 
 body {
   width: 100vw;
@@ -11,7 +13,9 @@ body {
   background: -webkit-gradient(linear, left top, right top, from(#1a1641), to(#2a246d));
   background: -webkit-linear-gradient(left, #1a1641 0%, #2a246d 100%);
   background: -o-linear-gradient(left, #1a1641 0%, #2a246d 100%);
-  background: linear-gradient(90deg, #1a1641 0%, #2a246d 100%); }
+  background: linear-gradient(90deg, #1a1641 0%, #2a246d 100%);
+}
+
 
   .cita {
     display: flex;
@@ -203,7 +207,10 @@ body {
     transform: scale(1.1); } }
 
 @media screen and (max-width: 942px) {
+  
+  
   .circle:nth-of-type(3) {
+    
     top: 5%;
     left: 10%;
     width: 100px;
@@ -246,8 +253,10 @@ body {
   .container img {
     width: 20%; } }
 
-@media screen and (max-width: 585px) {
+@media screen and (max-width: 585px)  {
+   
   .circle:nth-of-type(3) {
+
     top: 5%;
     left: 10%;
     width: 100px;
@@ -282,6 +291,7 @@ body {
   .reloj img {
     width: 100%; }
   .container p {
+    overflow: hidden;
     font-size: 1.5rem; }
   .container h1 {
     margin: 5% 0px 15% 0px;
@@ -289,4 +299,7 @@ body {
   .container a {
     font-size: 1rem; }
   .container img {
-    width: 30%; } }
+    width: 30%; } 
+  
+
+}
